--- a/package.json
+++ b/package.json
@@ -9,21 +9,24 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cheerio": "^1.0.0-rc.2",
+    "jsonwebtoken": "^8.4.0",
     "koa": "^2.2.0",
     "koa-bodyparser": "^3.2.0",
     "koa-convert": "^1.2.0",
+    "koa-jwt": "^3.5.1",
     "koa-logger": "^2.0.1",
     "koa-onerror": "^1.2.1",
     "koa-router": "^7.1.1",
     "koa-static": "^3.0.0",
     "koa-views": "^5.2.1",
-    "koa-jwt": "^3.5.1",
     "koa2-cors": "^2.0.6",
+    "mysql2": "^1.6.5",
     "pug": "^2.0.0-rc.1",
-    "sequelize": "^4.42.0",
-    "jsonwebtoken": "^8.4.0",
-    "bcryptjs": "^2.4.3",
-    "mysql2": "^1.6.5"
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.7",
+    "sequelize": "^4.42.0"
   },
   "devDependencies": {
     "nodemon": "^1.8.1"
