--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node bin/www",
-    "dev": "./node_modules/.bin/nodemon bin/www",
+    "dev": "nodemon bin/www",
     "prd": "pm2 start ecosystem.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -27,8 +27,5 @@
     "request": "^2.88.0",
     "request-promise-native": "^1.0.7",
     "sequelize": "^4.42.0"
-  },
-  "devDependencies": {
-    "nodemon": "^1.8.1"
   }
 }
