--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cheerio": "^1.0.0-rc.2",
+    "iconv-lite": "^0.4.24",
     "jsonwebtoken": "^8.4.0",
     "koa": "^2.2.0",
     "koa-bodyparser": "^3.2.0",
